2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Move epc_test_goto_if_fail to tests/framework.h.

	* tests/framework.h: Add epc_test_goto_if_fail.
	* tests/test-consumer-by-name.c: Remove epc_test_goto_if_fail.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Rename epc_shell_expand_name to epc_publisher_expand_name: EpcShell
	is private API, and the function is related to publishing anyway.

	* libepc/publisher.c, libepc/publisher.h:
	Add epc_publisher_expand_name and epc_utf8_strtitle.
	* libepc/shell.c, libepc/shell.h:
	Remove epc_shell_expand_name and epc_utf8_strtitle.
	* tests/test-expand-name.c: Use epc_publisher_expand_name.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Correct the EpcProgressWindow constructor to properly assign the
	parent window by calling gtk_window_set_transient_for, instead
	of setting the "parent" property.

	* libepc-ui/progress-window.c: Properly set parent window.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Add "skip-our-own" property to EpcServiceMonitor which
	allows ignoring of services announced by the current process.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/service-monitor.c, libepc/service-monitor.h: Add
	"skip-our-own" property.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Add epc_shell_expand_name for constructing service names.

	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols.
	* libepc/shell.c, libepc/shell.h: Add epc_shell_expand_name.
	* Makefile.am, tests/.gitignore: Add tests/test-expand-name.c.
	* tests/test-expand-name.c: Test epc_shell_expand_name.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Add error argument to epc_shell_get_host_name to allow usage,
	even if no Avahi clients has been created yet.

	* libepc/shell.c, libepc/shell.h:
	Add error argument to epc_shell_get_host_name.