@@ -14,6 +14,7 @@ test-dispatcher-simple-service
 test-dispatcher-subtypes
 test-expand-name
 test-progress-hooks
+test-publisher-bookmarks
 test-publisher-change-name
 test-publisher-libsoup-494128
 test-service-type
